[workspace]
members = [
    "sql_tool_macros",
    "sql_tool_core"
]
[package]
name = "sql_tool_kit"
version = "0.1.2"
edition = "2021"
authors = ["lkighy"]
description = "合并 sql_tool_core 和 sql_tool_macros 并一起导出，后续新增的功能都将从这个库中导出"
license = "MIT"

exclude = [
    "examples/gen_fields_demo",
    "examples/gen_select_demo",
    "examples/gen_values_demo",
    "examples/gen_where_demo",
    "examples/gen_set_demo",
    "examples/gen_all_demo"
    # 其他要排除的包
]
resolver = "2"

[dependencies]
sql_tool_macros = "0.1.2"
sql_tool_core = "0.1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1