[package]
name = "sql_tool_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = "2.0.43"
sql_tool_core = { path = "../sql_tool_core" }

[lib]
proc-macro = true