[package]
name = "sql_tool_macros"
version = "0.1.1"
edition = "2021"
description = "这个库用于存储宏"
license = "MIT"
authors = ["lkighy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = "2.0.43"
sql_tool_core = "0.1.0"

[lib]
proc-macro = true